--- a/config/boards/shields/ergotravel/ergotravel.conf
+++ b/config/boards/shields/ergotravel/ergotravel.conf
@@ -1,6 +1,9 @@
 #CONFIG_EC11=y
 #CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
 
+CONFIG_ZMK_RGB_UNDERGLOW=y
+CONFIG_WS2812_STRIP=y
+
 # set the underglow effect to the new status effect 
 CONFIG_ZMK_RGB_UNDERGLOW_EFF_START=4
 
