--- a/config/west.yml
+++ b/config/west.yml
@@ -8,8 +8,8 @@ manifest:
       url-base: https://github.com/Xoffio/
   projects:
     - name: zmk
-      remote: xoffio-zmk
-      revision: xo-status-fx
+      remote: zmkfirmware
+      revision: main
       import: app/west.yml
   self:
     path: config
